sec(auth): fix critical JWT and CORS vulnerabilities
- Fix inverted token expiry logic

- Upgrade JWT signing to strong HMAC-SHA256 key

- Remove plaintext JWT logging from filters

- Consolidate public URLs into shouldNotFilter

- Fix CORS origin configuration to read from properties